_modules/azure/kubernetes/platform/module/manifests/helm-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: "${namespace}"
  annotations:
  kubernetes.io/ingress.class: azure/application-gateway
spec:
 tls:
  - hosts:
    - "${domain_name}"
    secretName: myapp-tls-secret
 rules:
  - hosts: "${domain_name}"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myapp-service
              port:
                number: 80
